--- a/.github/workflows/ikomia-hub-ci.yaml
+++ b/.github/workflows/ikomia-hub-ci.yaml
@@ -21,6 +21,7 @@ env:
   SCW_SECRET_KEY: ${{ secrets.IKOMIA_HUB_CI_SCW_SECRET_KEY }}
   SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.IKOMIA_HUB_CI_SCW_DEFAULT_ORGANIZATION_ID }}
   SCW_DEFAULT_PROJECT_ID: ${{ secrets.IKOMIA_HUB_CI_SCW_DEFAULT_PROJECT_ID }}
+  SCW_DEFAULT_REGION: fr-par
   UV_INDEX_URL: ${{ secrets.IKOMIA_HUB_CI_INDEX_URL }}
 
 jobs:
