Revert "chore: temporary allow all branches"
This reverts commit e4ca2f8ced51a140c1c06f20df95b7c75f867706.

--- a/.github/workflows/ikomia-hub-ci.yaml
+++ b/.github/workflows/ikomia-hub-ci.yaml
@@ -2,7 +2,9 @@ name: Ikomia HUB CI
 
 on:
   push:
-    branches: ['**']
+    branches:
+      - production
+      - main
   pull_request_review:
     types: [submitted]
   schedule:
