--- a/.github/workflows/ikomia-hub-ci.yaml
+++ b/.github/workflows/ikomia-hub-ci.yaml
@@ -15,6 +15,10 @@ on:
         description: 'Wait for the CI to finish'
         type: boolean
         default: true
+      send_webhook_on_success:
+        description: 'Send a Discord webhook on success'
+        type: boolean
+        default: false
       send_webhook_on_failure:
         description: 'Send a Discord webhook on failure'
         type: boolean
@@ -59,6 +63,7 @@ jobs:
           RUN_COMMIT="${{ github.sha }}"
           RUN_USE_IKOMIA_REGISTRY="True"
           RUN_WAIT="True"
+          RUN_WEBHOOK_ON_SUCCESS="False"
           RUN_WEBHOOK_ON_FAILURE="True"
           RUN_PUSH_ON_SUCCESS="False"
 
@@ -86,6 +91,9 @@ jobs:
             if [ "${{ github.event.inputs.wait }}" = "false" ]; then
               RUN_WAIT="False"
             fi
+            if [ "${{ github.event.inputs.send_webhook_on_success }}" = "true" ]; then
+              RUN_WEBHOOK_ON_SUCCESS="True"
+            fi
             if [ "${{ github.event.inputs.send_webhook_on_failure }}" = "false" ]; then
               RUN_WEBHOOK_ON_FAILURE="False"
             fi
@@ -95,6 +103,7 @@ jobs:
           echo "run_commit=$RUN_COMMIT" >> "$GITHUB_OUTPUT"
           echo "run_use_ikomia_registry=$RUN_USE_IKOMIA_REGISTRY" >> "$GITHUB_OUTPUT"
           echo "run_wait=$RUN_WAIT" >> "$GITHUB_OUTPUT"
+          echo "run_webhook_on_success=$RUN_WEBHOOK_ON_SUCCESS" >> "$GITHUB_OUTPUT"
           echo "run_webhook_on_failure=$RUN_WEBHOOK_ON_FAILURE" >> "$GITHUB_OUTPUT"
           echo "run_push_on_success=$RUN_PUSH_ON_SUCCESS" >> "$GITHUB_OUTPUT"
 
@@ -105,6 +114,7 @@ jobs:
           IKOMIA_HUB_CI_COMMIT: ${{ steps.configure.outputs.run_commit }}
           IKOMIA_HUB_CI_USE_IKOMIA_REGISTRY: ${{ steps.configure.outputs.run_use_ikomia_registry }}
           IKOMIA_HUB_CI_WAIT: ${{ steps.configure.outputs.run_wait }}
+          IKOMIA_HUB_CI_DISCORD_WEBHOOK_ON_SUCCESS: ${{ steps.configure.outputs.run_webhook_on_success }}
           IKOMIA_HUB_CI_DISCORD_WEBHOOK_ON_FAILURE: ${{ steps.configure.outputs.run_webhook_on_failure }}
           # IKOMIA_HUB_CI_PUSH_ON_SUCCESS: ${{ steps.configure.outputs.run_push_on_success }}
           # IKOMIA_HUB_CI_PYTHON: "3.8 3.9"  # Uncomment to change the python versions to test
